# ic-metrics

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: bench.cpp  compare.cpp  harness.cpp  ic_metrics.cpp  ic_metrics.h  ic_pfor.cpp  ic_pfor.h  ic_shared.h  ic_ssimulacra2.cc  ic_ssimulacra2.h  ic_vars.cpp  ic_vars.h  impl_butteraugli.cpp  impl_cloudinary.cpp  impl_fast_ssim2.cpp  impl_fssimu2.cpp  impl_vszip.cpp  impls.h  ssimudiff.cpp
